--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
+    "react-uuid": "^2.0.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.27"
   },
